fixed spacing issue

--- a/ICP2/Web_Lesson2/Inclass/CSS_Inclass/ColorGridTask/style.css
+++ b/ICP2/Web_Lesson2/Inclass/CSS_Inclass/ColorGridTask/style.css
@@ -64,7 +64,7 @@ body {
   width: 450px;
   height: 250px;
   margin: 0 auto;
-  top: 30vh;
+  top: 25vh;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -79,7 +79,7 @@ body {
 #search-bar {
   position: relative;
   flex-basis: 100%;
-  height: 25px;
+  height: 40px;
   margin-top: 20px;
   border-radius: 1px;
   border: solid 1px #DDD;
@@ -175,7 +175,7 @@ footer a {
   position: relative;
   width: 450px;
   height: 250px;
-  top: 30vh;
+  top: 15vh;
   margin: auto;
   display: flex;
   justify-content: center;
